--- a/login/mini02/WebContent/WEB-INF/web.xml
+++ b/login/mini02/WebContent/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <resource-ref>
-     <description>connection</description>
+     <description>DB connection</description>
      <res-ref-name>jdbc/mysql</res-ref-name>
      <res-type>javax.sql.DataSource</res-type>
      <res-auth>Container</res-auth>
