--- a/login/mini02/.classpath
+++ b/login/mini02/.classpath
@@ -14,6 +14,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/mac/Desktop/ExampleProjectB-FINAL/WEB-INF/lib/mysql-connector-java-8.0.21.jar"/>
+	<classpathentry kind="lib" path="/Users/mac/Downloads/mysql-connector-java-8.0.25/mysql-connector-java-8.0.25.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
