--- a/login/mini02/WebContent/WEB-INF/web.xml
+++ b/login/mini02/WebContent/WEB-INF/web.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
   <display-name>mini02</display-name>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -12,8 +13,9 @@
   <resource-ref>
   <!-- JNDI Setting -->
      <description>DB connection</description>
-     <res-ref-name>jdbc/mysql</res-ref-name>
+     <res-ref-name>jdbc/my</res-ref-name>
      <res-type>javax.sql.DataSource</res-type>
      <res-auth>Container</res-auth>
 </resource-ref>
+
 </web-app>
